임플란트부분전체, 치아교정부분전체, 모바일 카테고리부분 수정

--- a/src/main/webapp/css/clientHeader.css
+++ b/src/main/webapp/css/clientHeader.css
@@ -14,11 +14,11 @@
 header .mobile-sub-category .small-category a {
     display: block;
     color: #b2b2b2;
-    padding: 16px 0;
+    padding: 12px 0;
 }
 header .mobile-sub-category .sns {
     padding: 0 30px;
-    margin-top: 65px;
+    margin-top: 34px;
     padding-bottom: 100px;
 }
 header .mobile-sub-category .sns img {
@@ -59,7 +59,7 @@ header .mobile-sub-category .large-category > li p {
     cursor: pointer;
 }
 header .mobile-sub-category .large-category > li:nth-child(1) p.active + div {
-    height: 300px;
+    height: 278px;
 }
 header .mobile-sub-category .large-category > li:nth-child(2) p.active + div {
     height: 250px;
@@ -74,12 +74,14 @@ header .mobile-sub-category .large-category > li:nth-child(5) p.active + div {
     height: 150px;
 }
 header .mobile-sub-category .large-category > li:nth-child(6) p.active + div {
-    height: 310px;
+    height: 255px;
 }
 header .mobile-sub-category .large-category > li p + div {height: 0;transition: height .3s ease;}
 header .mobile-sub-category .large-category {
-    padding: 0 30px;
+    padding: 0px 30px;
     box-sizing: border-box;
+    letter-spacing: -1px;
+    padding-left: 39px;
 }
 header .mobile-sub-category .large-category > li {
     float: none;
@@ -88,19 +90,19 @@ header .mobile-sub-category .large-category > li {
     overflow: hidden;
 }
 header .mobile-sub-category .login-container {
-    padding-bottom: 40px;
+    padding-bottom: 31px;
     border-bottom: 1px solid #cecece;
     padding-left: 30px;
 }
 header .mobile-sub-category .content {
-    padding-top: 45px;
+    padding-top: 36px;
 }
 header .mobile-sub-category .logout-icon {
     background: url(../images/cmmn/logout_1.png);
     width: 26px;
     height: 29px;
     display: inline-block;
-    margin-right: 17px;
+    margin-right: 11px;
     vertical-align: -8px;
     margin-left: 3px;
     background-size: contain;
@@ -113,7 +115,7 @@ header .mobile-sub-category .mypage-icon {
     width: 26px;
     height: 29px;
     display: inline-block;
-    margin-right: 17px;
+    margin-right: 11px;
     vertical-align: -8px;
     margin-left: 3px;
     background-size: contain;
@@ -143,14 +145,17 @@ header .mobile-sub-category .join-icon {
     background-repeat: no-repeat;
 }
 header .mobile-sub-category .login li:first-child {
-    margin-bottom: 19px;
+    margin-bottom: 11px;
+    letter-spacing: -1px;
 }
 header .mobile-sub-category .login li a {
     color: #222;
+    letter-spacing: -1px;
 }
 header .mobile-sub-category h2 {
     font-size: 17px;
-    margin-bottom: 26px;
+    margin-bottom: 21px;
+    letter-spacing: -1px;
 }
 .category-logo {
     height: 66px;
