게시판부분 css 수정

--- a/src/main/webapp/css/board/boardCommn.css
+++ b/src/main/webapp/css/board/boardCommn.css
@@ -100,11 +100,12 @@
 
 @media screen and (max-width: 1300px) {
     .max-layout-width.mobile-full-width {
-        padding: 0 !important;
+        background: #f5f5f5;
     }
     .search .select-type {
         width: 100px;
         height: 40px;
+        letter-spacing: -1px;
     }
     .search .search-input {
         height: 40px;
@@ -121,3 +122,28 @@
         box-sizing: border-box;
     }
 }
+
+
+@media screen and (max-width: 375px) {
+    .paging {
+    text-align: center;
+    margin-bottom: 50px;
+}
+    .search-container {
+    padding: 8px 0;
+    background: #f5f5f5;
+    margin-bottom: 66px;
+}
+    .search .search-input {
+    height: 38px;
+}
+
+.search .select-type {
+    width: 100px;
+    height: 38px;
+    letter-spacing: -1px;
+    font-size: 14px;
+}
+}
+
+
