--- a/src/main/webapp/css/member/input.css
+++ b/src/main/webapp/css/member/input.css
@@ -212,6 +212,8 @@
     .table .input p {
         word-break: keep-all;
         line-height: 1.3;
+        font-size: 14px;
+        letter-spacing: -1px;
     }
     .table .id-con button {
         margin-top: 10px;
@@ -226,6 +228,10 @@
 }
 
 @media screen and (max-width: 414px) {
+    .table {
+    margin-top: 45px;
+    border-top: 2px solid #838383;
+}
 
     .filename {
         width: 100%;
@@ -247,6 +253,60 @@
     .table .phone-con span {
         width: 27.33333333333%;
         margin-left: 8%;
+        height: 46px;
+    }
+    .appendix-con .input {
+        padding-right: 10px;
+        box-sizing: border-box;
+    }
+}
+
+
+
+@media screen and (max-width: 375px) {
+    .table input {
+    height: 40px;
+    box-sizing: border-box;
+    border: 1px solid #d9d9d9;
+    outline: none;
+    font-size: 20px;
+}
+    .table label {
+    line-height: 40px;
+    padding: 3px 0;
+    position: relative;
+    padding-left: 50px;
+    cursor: pointer;
+    float: left;
+    box-sizing: border-box;
+    font-size: 14px;
+    letter-spacing: -1px;
+}
+
+    .filename {
+        width: 100%;
+    }
+    form .max-layout-width {
+        padding: 0 0px;
+    }
+    .table li strong {
+        width: 50px;
+        font-size: 14px;
+        padding-left: 10;
+        line-height: 1.3;
+        letter-spacing: -1px;
+    }
+    .table .input {
+        padding-left: 75px;
+    }
+    .table span.mail {
+        margin-left: 10%;
+    }
+    .table .phone-con span {
+        width: 27.333333%;
+        margin-left: 9%;
+        letter-spacing: -1px;
+        height: 44px;
     }
     .appendix-con .input {
         padding-right: 10px;
