--- a/src/main/webapp/css/mypage/mypage.css
+++ b/src/main/webapp/css/mypage/mypage.css
@@ -39,3 +39,29 @@
     box-sizing: border-box;
     width: 100%;
 }
+
+
+@media screen and (max-width:375px) {
+    .tab {
+    margin-top: 45px;
+}
+
+    .tab li {
+    width: 33.33333333%;
+    float: left;
+    box-sizing: border-box;
+    text-align: center;
+    font-size: 14px;
+    font-weight: bold;
+    border-left: 1px solid #e2e2e2;
+    cursor: pointer;
+}
+   .tab li a {
+    color: #222;
+    height: 41px;
+    padding: 14px 0;
+    display: inline-block;
+    box-sizing: border-box;
+    width: 100%;
+}
+    }
