--- a/src/main/webapp/css/mypage/mypageUpdate.css
+++ b/src/main/webapp/css/mypage/mypageUpdate.css
@@ -89,6 +89,7 @@
     line-height: 50px;
     margin-right: 15px;
     cursor: pointer;
+    letter-spacing: -1px;
 }
 
 .kakao span:first-child {
@@ -149,4 +150,38 @@
 .button-box button.active {
     background: #9b8b7e;
     color: #fff;
+}
+
+@media screen and (max-width: 375px) {
+    .sns {
+    margin-top: 38px;
+    padding-bottom: 62px;
+    border-bottom: 1px solid #d2d2d2;
+}
+    .button-box {
+    margin-left: -1%;
+    overflow: hidden;
+    margin-top: 35px;
+    margin-bottom: 125px;
+}
+    .sns p {
+    font-size: 14px;
+    margin-bottom: 9px;
+    position: relative;
+    padding-left: 10px;
+    letter-spacing:-1px;
+    line-height:1.4;
+}
+    .sns h2 {
+    font-size: 15px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    letter-spacing:-1px;
+}
+
+.text {
+    padding: 13px 0;
+    font-size: 14px;
+    letter-spacing: -1px;
+}
 }
