--- a/src/main/webapp/css/clientHeader.css
+++ b/src/main/webapp/css/clientHeader.css
@@ -963,7 +963,34 @@ header .header-banner-slider .slide-item04 .go {
 }
 
 @media screen and (max-width:492px) {
+
     header .mobile-sub-category {
         width: 100%;
     }
+}
+
+
+@media screen and (max-width:375px) {
+    header .mobile-sub-category .join-icon {
+    background: url(../images/cmmn/join.png);
+    width: 32px;
+    height: 26px;
+    display: inline-block;
+    margin-right: 5px;
+    vertical-align: -6px;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+header .mobile-sub-category .login-icon {
+    background: url(../images/cmmn/login.png);
+    width: 21px;
+    height: 29px;
+    display: inline-block;
+    margin-right: 12px;
+    vertical-align: -8px;
+    margin-left: 3px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position-y: 4px;
+}
 }
