--- a/src/main/webapp/css/member/member.css
+++ b/src/main/webapp/css/member/member.css
@@ -34,12 +34,14 @@
 
 .tab li div h2 {
     font-size: 22px;
-    font-weight: bold;
+    font-weight: 500;
     margin-bottom: 7px;
+    letter-spacing: -1px;
 }
 
 .tab li div p {
     font-size: 15px;
+    letter-spacing: -1px;
 }
 
 .tab li.active {
@@ -87,7 +89,8 @@
 
 @media screen and (max-width: 950px) {
     .tab {
-        margin-left: 0;
+        margin-left: 0px;
+        margin-top: 48px;
     }
     .tab li span {
         font-size: 41px;
@@ -131,8 +134,30 @@
 }
 
 @media screen and (max-width: 375px) {
+    .button-box button, .button-box a {
+    width: 47%;
+    margin-left: 3%;
+    float: left;
+    height: 40px;
+    font-weight: bold;
+    font-size: 14px;
+    border: none;
+    border-radius: 4px;
+    box-sizing: border-box;
+    padding: 10px 0;
+    text-align: center;
+    cursor: pointer;
+    outline: none;
+}
+    .button-box {
+    overflow: hidden;
+    margin-left: -3%;
+    margin-top: 50px;
+    margin-bottom: 130px;
+    padding: 0 30;
+}
     .tab li {
-        height: 105px;
+        height: 101px;
     }
     .tab li span {
         font-size: 32px;
