디자인 수정 요청 처리

--- a/src/main/webapp/css/clientFooter.css
+++ b/src/main/webapp/css/clientFooter.css
@@ -196,6 +196,9 @@
 }
 
 @media screen and (max-width: 914px) {
+    .footer-info-container .max-layout-width {
+        padding: 0 !important;;
+    }
     .footer-info-container .max-layout-width > ul.display-inline-block:first-child {
         padding: 0 20px;
         box-sizing: border-box;
