--- a/src/main/webapp/css/mypage/mypageReservation.css
+++ b/src/main/webapp/css/mypage/mypageReservation.css
@@ -37,23 +37,37 @@
 }
 
 
-@media screen and (max-width:375px) {
-    .table .center, .table .name, .table .phone {
-    width: 18%;
+@media screen and (max-width: 414px) {
+    .mypage-reservation .max-layout-width {
+        padding: 0 30px;
+        box-sizing: border-box;
+    }
 }
 
+@media screen and (max-width:375px) {
+    .table .date {
+        width: 27%;
+    }
+    .table .name {
+        display: none;
+    }
+    .table .center, .table .name, .table .phone {
+        width: 24%;
+    }
+
     .table .etc {
-    width: 25%;
-}
+        width: 25%;
+    }
     .table {
-    margin-top: 40px;
-    border-top: 2px solid #838383;
-    margin-bottom: 128px;
-}
-.table li {
-    height: 45px;
-    float: left;
-    padding: 15px 0;
-    font-size: 14px;
-    letter-spacing: -1px;
-}}
+        margin-top: 40px;
+        border-top: 2px solid #838383;
+        margin-bottom: 128px;
+    }
+    .table li {
+        height: 45px;
+        float: left;
+        padding: 15px 0;
+        font-size: 14px;
+        letter-spacing: -1px;
+    }}
+
