--- a/src/main/webapp/css/member/input.css
+++ b/src/main/webapp/css/member/input.css
@@ -217,6 +217,7 @@
     }
     .table .id-con button {
         margin-top: 10px;
+        font-size: 14px;
     }
 }
 
@@ -228,16 +229,22 @@
 }
 
 @media screen and (max-width: 414px) {
+    .table label {
+        padding-left: 22px !important;
+    }
+    .table label:before {
+        left: 0;
+    }
     .table {
-    margin-top: 45px;
-    border-top: 2px solid #838383;
-}
+        margin-top: 45px;
+        border-top: 2px solid #838383;
+    }
 
     .filename {
         width: 100%;
     }
     form .max-layout-width {
-        padding: 0 20px;
+        padding: 0 25px;
     }
     .table li strong {
         width: 50px;
@@ -265,29 +272,32 @@
 
 @media screen and (max-width: 375px) {
     .table input {
-    height: 40px;
-    box-sizing: border-box;
-    border: 1px solid #d9d9d9;
-    outline: none;
-    font-size: 20px;
-}
+        height: 40px;
+        box-sizing: border-box;
+        border: 1px solid #d9d9d9;
+        outline: none;
+        font-size: 20px;
+    }
     .table label {
-    line-height: 40px;
-    padding: 3px 0;
-    position: relative;
-    padding-left: 50px;
-    cursor: pointer;
-    float: left;
-    box-sizing: border-box;
-    font-size: 14px;
-    letter-spacing: -1px;
-}
+        line-height: 40px;
+        padding: 3px 0;
+        position: relative;
+        padding-left: 50px;
+        cursor: pointer;
+        float: left;
+        box-sizing: border-box;
+        font-size: 14px;
+        letter-spacing: -1px;
+    }
 
     .filename {
         width: 100%;
     }
     form .max-layout-width {
-        padding: 0 0px;
+        padding: 0 25px;
+    }
+    .table li.pass-chk-con strong {
+        padding-top: 13px;
     }
     .table li strong {
         width: 50px;
