--- a/src/main/webapp/css/login/search.css
+++ b/src/main/webapp/css/login/search.css
@@ -98,3 +98,10 @@
 .date {
     margin-bottom: 50px;
 }
+
+@media screen and (max-width: 414px) {
+    .member .max-layout-width {
+        padding: 0 20px;
+        box-sizing: border-box;
+    }
+}
