회원가입 약관 내용 페이지에 첨부

--- a/src/main/webapp/css/board/boardWrite.css
+++ b/src/main/webapp/css/board/boardWrite.css
@@ -32,6 +32,10 @@
     height: 250px;
     margin-bottom: 30px;
     box-sizing: border-box;
+    line-height: 1.7;
+    padding: 10px 20px;
+    box-sizing: border-box;
+    overflow-y: scroll;
 }
 
 .radio-box {
@@ -218,65 +222,65 @@ textarea {
 
 @media screen and (max-width: 375px) {
     .agreement h3 {
-    font-size: 18px;
-}
+        font-size: 18px;
+    }
     .agreement h3 + div {
-    width: 100%;
-    border: 1px solid #e4e4e4;
-    height: 250px;
-    margin-bottom: 15px;
-    box-sizing: border-box;
+        width: 100%;
+        border: 1px solid #e4e4e4;
+        height: 250px;
+        margin-bottom: 15px;
+        box-sizing: border-box;
     }
     .filename {
-    width: 250px;
-    height: 40px;
-    border: 1px solid #d9d9d9;
-    display: inline-block;
-    float: left;
-    box-sizing: border-box;
-    line-height: 44px;
-    padding-left: 10px;
-}
+        width: 250px;
+        height: 40px;
+        border: 1px solid #d9d9d9;
+        display: inline-block;
+        float: left;
+        box-sizing: border-box;
+        line-height: 44px;
+        padding-left: 10px;
+    }
     .button-box {
-    margin-top: 29px;
-    text-align: center;
-    overflow: hidden;
-    margin-bottom: 120px;
-}
+        margin-top: 29px;
+        text-align: center;
+        overflow: hidden;
+        margin-bottom: 120px;
+    }
     .button-box button, .button-box a {
-    width: 91px;
-    height: 39px;
-    border: none;
-    color: #fff;
-    margin: 0 2px;
-    background: #a2a2a2;
-    font-size: 14px;
-    display: inline-block;
-    line-height: 39px;
-    float: left;
-    cursor: pointer;
-    letter-spacing: -1px;
-}
+        width: 91px;
+        height: 39px;
+        border: none;
+        color: #fff;
+        margin: 0 2px;
+        background: #a2a2a2;
+        font-size: 14px;
+        display: inline-block;
+        line-height: 39px;
+        float: left;
+        cursor: pointer;
+        letter-spacing: -1px;
+    }
     .appendix-con button {
-    width: 91px;
-    height: 39px;
-    border: none;
-    background: #9b8b7e;
-    color: #fff;
-    /* margin-left: 5px; */
-    cursor: pointer;
-    letter-spacing: -1px;
-    font-size: 14px;
-    margin-top: 9px;
-}
+        width: 91px;
+        height: 39px;
+        border: none;
+        background: #9b8b7e;
+        color: #fff;
+        /* margin-left: 5px; */
+        cursor: pointer;
+        letter-spacing: -1px;
+        font-size: 14px;
+        margin-top: 9px;
+    }
     .agreement label {
-    display: block;
-    letter-spacing: -1px;
-    font-size: 14px;
-}
-.agreement {
-    padding: 0 0px;
-    box-sizing: border-box;
-    margin-top: 42px;
-}
+        display: block;
+        letter-spacing: -1px;
+        font-size: 14px;
+    }
+    .agreement {
+        padding: 0 0px;
+        box-sizing: border-box;
+        margin-top: 42px;
+    }
 }
