--- a/src/main/webapp/css/member/memberAgreement.css
+++ b/src/main/webapp/css/member/memberAgreement.css
@@ -33,6 +33,10 @@
     height: 250px;
     margin-bottom: 30px;
     box-sizing: border-box;
+    overflow-y: scroll;
+    line-height: 1.7;
+    padding: 10px 20px;
+    box-sizing: border-box;
 }
 
 .radio-box {
@@ -53,25 +57,25 @@
 
 @media screen and (max-width: 1300px) {
     .radio-box {
-    display: inline-block;
-    float: right;
-    font-size:14px;
-}
+        display: inline-block;
+        float: right;
+        font-size:14px;
+    }
     .agreement h3 + div {
-    width: 100%;
-    border: 1px solid #e4e4e4;
-    height: 250px;
-    margin-bottom: 10px;
-    box-sizing: border-box;
-}
+        width: 100%;
+        border: 1px solid #e4e4e4;
+        height: 250px;
+        margin-bottom: 10px;
+        box-sizing: border-box;
+    }
     .agreement h3 {
-    font-size: 18px;
-    font-weight: bold;
-    position: relative;
-    padding-left: 13px;
-    margin-bottom: 17px;
-    letter-spacing: -1px;
-}
+        font-size: 18px;
+        font-weight: bold;
+        position: relative;
+        padding-left: 13px;
+        margin-bottom: 17px;
+        letter-spacing: -1px;
+    }
     .agreement {
         padding: 0 30px;
         box-sizing: border-box;
